finished table examples and fixed css bug on overflow

--- a/Elemental.Theme/wwwroot/elemental.css
+++ b/Elemental.Theme/wwwroot/elemental.css
@@ -681,8 +681,7 @@ body {
     .ae.table .ae.table-rows .ae.table-row .ae.table-cell {
       background-color: #fff;
       word-wrap: break-word;
-      padding: 0.5rem 0 0.5rem 0.75rem;
-      transition: 0.4s cubic-bezier(0.25, 0.8, 0.25, 1); }
+      padding: 0.5rem 0 0.5rem 0.75rem; }
       .ae.table .ae.table-rows .ae.table-row .ae.table-cell::-webkit-scrollbar {
         width: 0.25rem; }
       .ae.table .ae.table-rows .ae.table-row .ae.table-cell::-webkit-scrollbar-track {
@@ -697,6 +696,7 @@ body {
         padding-left: 0.5rem;
         border-left: 0.25rem solid transparent; }
       .ae.table .ae.table-rows .ae.table-row .ae.table-cell:hover {
+        transition: 0.4s cubic-bezier(0.25, 0.8, 0.25, 1);
         background-color: #edf2f7; }
       .ae.table .ae.table-rows .ae.table-row .ae.table-cell a:hover {
         text-decoration: underline; }
